2009-12-12  Justin Davis  <jrcd83@gmail.com>

	* 0.14 RELEASE

	* lib/CPANPLUS/Dist/Arch.pm (get_cpandistdir): Fixed bug caused by
	distributions having letters in their filenames.  The extracted
	directory did not have the trailing letter.  Now we use the
	distribution directory name previously stored by CPANPLUS.

	* lib/CPANPLUS/Dist/Arch.pm (dist_pkgver): Fixed bug with letters
	in package versions.  Letters are removed because makepkg cannot
	compare versions with letters properly.  Underscores are now only
	allowed at the end of the version; for developer releases.

2009-12-02  Justin Davis  <jrcd83@gmail.com>

	* 0.13 RELEASE

	* lib/CPANPLUS/Dist/Arch.pm (create): Fixed a bug caused when
	PKGDEST environment variable was used.  Fixed a bug when yaourt is
	trying to run ./Build in a /tmp mounted with the noexec option.
	Thanks to "xenoterracide" for pointing this out on the AUR; which
	led me to the even worse PKGDEST bug.

	* lib/CPANPLUS/Dist/Arch.pm (get_pkgpath): Added new method.

	* t/02-build.t: Checks for online connectivity and deletes
	the test package after it is created.

	* ChangeLog: Switched to the emacs style changelog since...
	I use emacs.

Revision history for CPANPLUS-Dist-Arch

0.12    October 29, 2009
        Fixed bugs when searching for XS packages.
        Fixed a regexp bug when escaping bash characters in pkgdesc.
        Changed the automatic perl dependency to not have a version.

0.11    June 9, 2009
        I added List::MoreUtils in the last release, thought it was a
        core module, and forgot to add it to the Build.PL.  So I just
        removed use of "uniq" now.

0.10    May 28, 2009
        Fixed trivial bug with Maintainer in PKGBUILD having a newline.

0.09    May 27, 2009
        Added many package name overrides from the Arch website.
        Removed use of Readonly, now we only need core modules.
        Now searches for non-perl dependencies as well! (ie for XS modules)
        Tweaked PKGBUILD again.
