@@ -1,6 +1,6 @@
 ---
 name: CPANPLUS-Dist-Arch
-version: 0.14
+version: 0.15
 author:
   - 'Justin Davis <jrcd83@gmail.com>'
 abstract: CPANPLUS backend for building Archlinux pacman packages
@@ -27,7 +27,7 @@ build_requires:
 provides:
   CPANPLUS::Dist::Arch:
     file: lib/CPANPLUS/Dist/Arch.pm
-    version: 0.14
+    version: 0.15
 generated_by: Module::Build version 0.280801
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
